--- a/config/database.yml
+++ b/config/database.yml
@@ -19,14 +19,14 @@ default: &default
 
 development:
   <<: *default
-  database: DaiGo_development
+  database: Pieces_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: DaiGo_test
+  database: Pieces_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +49,7 @@ test:
 #
 production:
   <<: *default
-  database: DaiGo_production
-  username: DaiGo
-  password: <%= ENV['DAIGO_DATABASE_PASSWORD'] %>
+  database: Pieces_production
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
